--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "test": "test"
   },
   "scripts": {
- 
-    "test": "jest"    
+    "test": "node Matlab.js && node tests/test_node.js"
   },
   "repository": {
     "type": "git",
@@ -25,8 +24,5 @@
   "bugs": {
     "url": "https://github.com/VivekTRamamoorthy/MatlabJS/issues"
   },
-  "homepage": "https://github.com/VivekTRamamoorthy/MatlabJS#readme",
-  "devDependencies": {
-    "jest": "^27.5.1"
-  }
+  "homepage": "https://github.com/VivekTRamamoorthy/MatlabJS#readme"
 }
