--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
-
 tests/*
 node/*
 !test_script.js
 !test_node.js
 !test_export.js
 !run_tests.js
+!test_browser.js
 *.ts
 node_modules
+.vscode/settings.json
