--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "matlabjs",
-  "version": "0.1.1001",
+  "version": "0.1.2",
   "description": "A javascript minilibrary for basic matlab functions",
-  "main": "node/main.js",
+  "main": "Matlab.js",
   "directories": {
     "test": "test"
   },
